--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-    <script src="home1_1.js"></script>
-    <script src="home1_2.js"></script>
+    <!-- <script src="home_2.1.js"></script> -->
+    <!-- <script src="home_2.2.js"></script> -->
+    <!-- <script src="home_2.3.js"></script> -->
+    <!-- <script src="home_2.4.js"></script> -->
+    <!-- <script src="home_2.5-6.js"></script> -->
+    <!-- <script src="home_2.7.js"></script> -->
+    <script src="home_2.8.js"></script>
 </body>
 
 </html>
